# Dozenal

./: .env  README.md  pyproject.toml
.github/: copilot-instructions.md
src/dozenal/: __init__.py  advanced_math.py  cli.py  dozenal_calc.py  dozenal_decimal_converter.py  interactive.py
tests/: conftest.py  test_advanced_math.py  test_dozenal_calc.py  test_dozenal_decimal_converter.py  test_interactive.py
