[project]
name = "dozenal"
version = "0.1.12"
description = "Dozenal (Base-12) math utilities"
readme = "README.md"
authors = [
    { name = "DaytonFishell", email = "d_fishell@icloud.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.5",
]

[project.scripts]
dozenal = "dozenal:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
